ns-istio-test.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: istio-test
spec: {}
status: {}
