hello-world-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: hello-world
  name: hello-world
  namespace: istio-test
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: hello-world
