hello-world-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hello-world
  namespace: istio-test
spec:
  hosts:
  - "*"
  gateways:
  - my-gateway # applies to all the sidecars in the mesh
  http:
  - route:
    - destination:
        port:
          number: 80
        host: hello-world.istio-test.svc.cluster.local
